--- a/index.html
+++ b/index.html
@@ -15,22 +15,34 @@
             font-family: 'Poppins', sans-serif;
         }
 
+        /* Animated Background */
         body {
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fad0c4, #ffdde1);
+            background-size: 400% 400%;
+            animation: gradientBG 6s ease infinite;
         }
 
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* Glassmorphism Effect */
         .login-container {
-            background: white;
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(10px);
             padding: 30px;
             border-radius: 12px;
-            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.1);
             text-align: center;
             width: 350px;
             transition: 0.3s;
+            border: 1px solid rgba(255, 255, 255, 0.3);
         }
 
         .login-container:hover {
@@ -38,30 +50,36 @@
         }
 
         h2 {
+            color: #fff;
             margin-bottom: 20px;
-            color: #333;
+            font-weight: 600;
         }
 
         input {
             width: 100%;
             padding: 12px;
             margin: 10px 0;
-            border: 1px solid #ccc;
+            border: none;
             border-radius: 8px;
             font-size: 16px;
             transition: 0.3s;
+            outline: none;
+            background: rgba(255, 255, 255, 0.2);
+            color: #fff;
+        }
+
+        input::placeholder {
+            color: rgba(255, 255, 255, 0.7);
         }
 
         input:focus {
-            border-color: #764ba2;
-            outline: none;
-            box-shadow: 0 0 8px rgba(118, 75, 162, 0.3);
+            box-shadow: 0 0 8px rgba(255, 255, 255, 0.3);
         }
 
         button {
             width: 100%;
             padding: 12px;
-            background: #764ba2;
+            background: #ff758c;
             color: white;
             border: none;
             border-radius: 8px;
@@ -71,20 +89,21 @@
         }
 
         button:hover {
-            background: #5a3b91;
+            background: #ff5470;
         }
 
         .error-message {
-            color: red;
+            color: yellow;
             margin-top: 10px;
             font-size: 14px;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
 
     <div class="login-container">
-        <h2>Welcome Back</h2>
+        <h2>Welcome Back!</h2>
         <input type="text" id="username" placeholder="Enter ID">
         <input type="password" id="password" placeholder="Enter Password">
         <button onclick="checkLogin()">Login</button>
