--- a/index.html
+++ b/index.html
@@ -25,21 +25,38 @@
             position: relative;
         }
 
-        /* Floating Particles */
-        body::before {
-            content: "";
+        /* Floating Particles - Pure CSS */
+        .particles {
             position: absolute;
             width: 100%;
             height: 100%;
-            background: url('https://i.imgur.com/Yi5S9D4.png'); /* Particle effect */
-            opacity: 0.3;
-            animation: moveParticles 10s infinite linear;
+            overflow: hidden;
+            z-index: -1;
         }
 
-        @keyframes moveParticles {
-            0% { transform: translateY(0px); }
-            100% { transform: translateY(-20px); }
+        .particles span {
+            position: absolute;
+            width: 5px;
+            height: 5px;
+            background: cyan;
+            border-radius: 50%;
+            opacity: 0.6;
+            animation: float 10s infinite linear;
         }
+
+        @keyframes float {
+            0% { transform: translateY(0); opacity: 0.6; }
+            100% { transform: translateY(-100vh); opacity: 0; }
+        }
+
+        /* Randomly place particles */
+        .particles span:nth-child(1) { top: 90%; left: 10%; animation-duration: 7s; }
+        .particles span:nth-child(2) { top: 80%; left: 30%; animation-duration: 9s; }
+        .particles span:nth-child(3) { top: 70%; left: 50%; animation-duration: 6s; }
+        .particles span:nth-child(4) { top: 60%; left: 70%; animation-duration: 8s; }
+        .particles span:nth-child(5) { top: 50%; left: 20%; animation-duration: 10s; }
+        .particles span:nth-child(6) { top: 40%; left: 80%; animation-duration: 7s; }
+        .particles span:nth-child(7) { top: 30%; left: 60%; animation-duration: 9s; }
 
         /* Glassmorphism Login Box */
         .login-container {
@@ -173,6 +190,11 @@
     </style>
 </head>
 <body>
+
+    <div class="particles">
+        <span></span><span></span><span></span><span></span>
+        <span></span><span></span><span></span><span></span>
+    </div>
 
     <div class="login-container">
         <div class="glow"></div>
