--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neon Login Page</title>
+    <title>iamkkronly Login</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
@@ -198,7 +198,7 @@
 
     <div class="login-container">
         <div class="glow"></div>
-        <h2>Neon Login</h2>
+        <h2>iamkkronly Login</h2>
         
         <div class="input-group">
             <input type="text" id="username" placeholder=" " required>
